--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,18 @@
         "react"
     ],
     "rules": {
-        "linebreak-style": ["error", "windows"]
+        "linebreak-style": [
+            "error",
+            "windows"
+        ],
+        "require-jsdoc": [
+            "error",
+            {
+                "require": {
+                    "ArrowFunctionExpression": true,
+                    "FunctionExpression": true
+                }
+            }
+        ]
     }
 }
